{
  "appName": "Blinking",
  "home": "Home",
  "calendar": "My Day",
  "myDay": "My Day",
  "moment": "Moments",
  "timeline": "Timeline",
  "add": "Add",
  "routine": "Routine",
  "insights": "Insights",
  "settings": "Settings",
  "today": "Today",
...
